# cell-free

./: .gitignore  format_pdf.sh  prof  profile_output.lprof  profile_output.txt  profile_output_2026-07-04T222309.txt  profile_output_2026-07-04T222329.txt  pyproject.toml  relatorio.ipynb  tests-1.py
src/cell_free/: __init__.py
