[project]
name = "cell-free"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "artistrea", email = "apiravesi@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "line-profiler>=5.0.2",
    "matplotlib>=3.11.0",
    "nbconvert>=7.17.1",
    "notebook>=7.6.0",
    "numpy>=2.4.6",
    "scipy>=1.17.1",
    "tqdm>=4.68.3",
]

[project.scripts]
cell-free = "cell_free:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
